manifiestos/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: orchestration
  labels:
    app: frontend
spec:
  replicas: 1  
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: synregistry.azurecr.io/workshop-frontend:0.0.1
        resources: {
          limits: {
            cpu: "200m",
            memory: "128Mi"
          },
          requests: {
            cpu: "50m",
            memory: "32Mi"
          }
        }
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-pid
          mountPath: /var/run
        - name: nginx-cache
          mountPath: /var/cache/nginx
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: nginx-pid
        emptyDir: {}
      - name: nginx-cache
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: frontend-nginxconf-configmap
      imagePullSecrets:
      - name: synregistry-acr-secret
